src/objects/ACCL__ACS_Dictionary_Index__c.object
<CustomObject>
    <description>ACS Dictionary Index</description>
    <fields>
        <fullName>ACCL__Category__c</fullName>
        <description>ACS Dictionary Category</description>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Code__c</fullName>
        <description>ACS Dictionary Index Code</description>
        <label>Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__IsCore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__MappingType__c</fullName>
        <label>Mapping Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CategoryBased</fullName>
                </value>
                <value>
                    <fullName>CodeBased</fullName>
                </value>
                <value>
                    <fullName>ObjectBased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Nr_of_Translations__c</fullName>
        <label>Nr of Translations</label>
        <summaryForeignKey>ACCL__ACS_Dictionary_Content__c.ACCL__ACS_Dictionary_Index__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Message Configurator</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__IsCore__c</columns>
        <columns>ACCL__Category__c</columns>
        <columns>ACCL__Code__c</columns>
        <columns>ACCL__Nr_of_Translations__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Sync_Messages</fullName>
        <columns>NAME</columns>
        <columns>ACCL__IsCore__c</columns>
        <columns>ACCL__Category__c</columns>
        <columns>ACCL__Code__c</columns>
        <columns>ACCL__Nr_of_Translations__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCL__Category__c</field>
            <operation>contains</operation>
            <value>SyncMessages</value>
        </filters>
        <label>Sync Messages</label>
    </listViews>
    <nameField>
        <displayFormat>DIC-{000000}</displayFormat>
        <label>Message Configurator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Message Configurator</pluralLabel>
    <recordTypes>
        <fullName>ACCL__ACSDictionaryIndexCore_Configuration</fullName>
        <active>true</active>
        <label>ACS Dictionary Index Core Configuration</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__ACSDictionaryIndexExtendibleConfiguration</fullName>
        <active>true</active>
        <label>ACS Dictionary Index Extendible Configuration</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACCL__PreventEditCoreMessageConfiguration</fullName>
        <active>true</active>
        <description>Prevent edit of core indices</description>
        <errorConditionFormula>AND (PRIORVALUE(ACCL__IsCore__c), OR 
					(ISCHANGED(ACCL__IsCore__c),
					 ISCHANGED(ACCL__Category__c),
					 ISCHANGED(ACCL__Code__c),
					 ISCHANGED(ACCL__MappingType__c)))</errorConditionFormula>
        <errorMessage>Core configuration change is not allowed!</errorMessage>
    </validationRules>
</CustomObject>